# Laboratorios_Python

Laboratorio_1/: pyproject.toml
Laboratorio_1/src/laboratorio_1/: main.py
Laboratorio_2/: pyproject.toml
Laboratorio_2/src/laboratorio_2/ProgramaJSON/: Mascotas.json  main.py
Laboratorio_3/: pyproject.toml
Laboratorio_3/src/laboratorio_3/: main.py
Laboratorio_4/: pyproject.toml
Laboratorio_4/src/laboratorio_4/: main.py
Laboratorio_5/: pyproject.toml
